<resources>
    <string name="app_name">Sklep PJ</string>
    <string name="login">Logowanie</string>
    <string name="register">Rejestracja</string>
    <string name="logout">Wyloguj</string>
    <string name="first_name">Wprowadź Imię</string>
    <string name="last_name">Wprowadź Nazwisko</string>
    <string name="phone_number">Wprowadź numer telefonu</string>
    <string name="order_error">Błąd podczas zapisywania zamówienia.</string>
    <string name="add_to_order">Dodano do zamówienia: </string>
    <string name="sms_send_error">Nie udało się wysłać SMS-a</string>
    <string name="share_error">Nie udało się udostępnić zamówienia!</string>
    <string name="no_orders">Brak zamówień do wysłania!</string>
    <string name="no_orders_share">Brak zamówień do udostępnienia!</string>
    <string name="about_author">O autorze</string>
    <string name="password">Hasło</string>
    <string name="first_name_empty">Imię, nazwisko i numer telefonu nie mogą być puste!</string>
    <string name="User_name_login">Nazwa użytkownika</string>
    <string name="log.in">Zaloguj się</string>
    <string name="registered">Zarejestruj się</string>
    <string name="NoAcc">Nie masz konta? Zarejestruj się</string>
    <string name="no_all_text">Wypełnij wszystkie pola</string>
    <string name="login_success">Logowanie udane!</string>
    <string name="login_failed">Nieprawidłowe dane logowania</string>
    <string name="register_success">Rejestracja udana!</string>
    <string name="register_fail">Błąd podczas rejestracji</string>
    <string name="menu_list">Lista zamówień</string>
    <string name="save_sett">Zapisz ustawienia</string>
    <string name="about_author_menu">Informacje o autorze</string>
    <string name="share_menu">Udostępnij koszyk</string>
    <string name="sms_send">Wyślij SMS</string>
    <string name="lang">Język aplikacji</string>
    <string name="product">Produkt: </string>
    <string name="del_order">Usunięto zamówienie: </string>
    <string name="del_order_fail">Błąd podczas usuwania zamówienia.</string>
    <string name="your_orders">Twoje zamówienia:</string>
    <string name="order">Zamówienie:</string>
    <string name="price">Cena: </string>
    <string name="total_price">Całkowita cena: </string>
    <string name="date">Data: </string>
    <string name="welcome_text">Witaj w aplikacji!</string>
    <string name="show_order">Pokaż zamówienia</string>
    <string name="choose_lang">Wybierz język</string>
    <string name="order_error_add">Błąd podczas dodawania zamówienia.</string>
    <string name="order_save">Zamówienie zapisane.</string>
    <string name="order_first_name">Zamówienie użytkownika  </string>
    <string name="share">Udostępnij zamówienie</string>
    <string name="app_name_author">Aplikacja Sklep PJ</string>
    <string name="author">Autor: </string>
    <string name="function">Funkcje:</string>
    <string name="do_order">Składanie zamówień</string>
    <string name="sendViaSms">Wysyłanie zamówień przez SMS</string>
    <string name="sharing_orders">Udostępnianie zamówień</string>
    <string name="orders_history">Przeglądanie historii zamówień</string>
</resources>
